--- a/netlify.toml
+++ b/netlify.toml
@@ -20,6 +20,9 @@ ID = "bb363047-882c-4ab3-84bb-253ccc03ecc5"
   # Directory with the lambda functions to deploy to AWS.
   # functions = "project/functions/"
 
+[build.environment]
+  RUBY_VERSION = "2.6.2"
+
 # Production context: all deploys from the Production branch set in your site's 
 # deploy settings will inherit these settings.
 # [context.production]
