--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,10 @@ ASALocalRun/
 .mfractor/
 
 docs/_site
+src/.DS_Store
+.DS_Store
+src/.DS_Store
+src/dist/
+src/build/
+*.egg-info
+.pytest_cache/
