updated standard train.py script & outputs

--- a/arcus/azureml/experimenting/resources/requirements.txt
+++ b/arcus/azureml/experimenting/resources/requirements.txt
@@ -1,16 +1,15 @@
-numpy
-pandas
-tqdm
-joblib
-matplotlib
-opencv-python
-seaborn
-argparse
-azureml-core
 arcus-azureml>=0.0.dev0
 arcus-ml>=0.0.dev0
+numpy
+pandas
 azureml-core
-scikit-image
+tqdm
+joblib
 scikit-learn
-keras
-tensorflow
+matplotlib
+azureml-core
+tqdm
+scikit-learn
+opencv-python
+seaborn
+scikit-image
