--- a/arcus/azureml/experimenting/resources/requirements.txt
+++ b/arcus/azureml/experimenting/resources/requirements.txt
@@ -1,5 +1,9 @@
-arcus-azureml>=0.0.dev0
+arcus-azureml>=1.1.dev0
 arcus-ml>=0.0.dev0
+azureml-telemetry
+azureml-widgets
+azureml-dataprep
+azureml-train
 numpy
 pandas
 azureml-core
