--- a/arcus/azureml/experimenting/resources/requirements.txt
+++ b/arcus/azureml/experimenting/resources/requirements.txt
@@ -3,7 +3,6 @@ arcus-ml>=1.0.11.1
 opencv-python==3.3.0.9
 azureml-telemetry
 azureml-widgets
-tensorflow
 azureml-dataprep
 azureml-train
 numpy
@@ -19,3 +18,4 @@ scikit-learn
 seaborn
 scikit-image
 inference-schema
+pillow>=8.1.0 # not directly required, pinned by Snyk to avoid a vulnerabilitypillow>=8.1.0 # not directly required, pinned by Snyk to avoid a vulnerability
