--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ joblib
 scikit-learn
 scikit-image
 matplotlib
-tensorflow
+tensorflow>=2.1.0
 keras
 arcus-ml>=1.0.11
 opencv-python
+pillow>=8.1.0 # not directly required, pinned by Snyk to avoid a vulnerabilitypillow>=8.1.0 # not directly required, pinned by Snyk to avoid a vulnerability
 kaggle
+
