--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ matplotlib
 tensorflow>=2.1.0
 keras>=2.6.0rc3 # not directly required, pinned by Snyk to avoid a vulnerability
 arcus-ml>=1.0.11
-opencv-python==4.2.0.32.9
+opencv-python>=4.4.0.40
 pillow>=8.1.0 # not directly required, pinned by Snyk to avoid a vulnerabilitypillow>=8.1.0 # not directly required, pinned by Snyk to avoid a vulnerability
 kaggle
 networkx>=2.6 # not directly required, pinned by Snyk to avoid a vulnerability
