--- a/.azureml/config.json
+++ b/.azureml/config.json
@@ -1,5 +1,5 @@
 {
     "subscription_id": "c1537527-c126-428d-8f72-1ac9f2c63c1f",
-    "resource_group": "codit-ai-incubators",
-    "workspace_name": "codit-ai-incubators-ml"
+    "resource_group": "codit-arcus-azure-ml",
+    "workspace_name": "codit-arcus-azure-ml-workspace"
 }
